2008-06-02  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d.cpp: removed broken APIs and reorganized
	code.
	* clutter-box2d/clutter-box2d.h: removed function calls that are
	replaced with child properties.

	* clutter-box2d/clutter-box2d-actor.cpp:
	* clutter-box2d/clutter-box2d-actor.h: moved set and get type calls
	here from the main clutter-box2d.cpp file.

	* examples/actor-manipulator.c: (action_set_linear_velocity),
	(actor_manipulator_press): removed menu items relying on unimplemented
	functionality.

2008-06-02  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d.h: moved all definitions and code
	* clutter-box2d/clutter-box2d.cpp: related to joints into ...
	* clutter-box2d/clutter-box2d-joint.cpp: ... it's own files.
	* clutter-box2d/clutter-box2d-joint.h:
	* clutter-box2d/Makefile.am: added new files.

2008-06-02  Øyvind Kolås  <pippin@o-hand.com>

	Refactoring of ClutterBox2D code to use ClutterChildMeta for tracking
	and synchronizing state between graphics and physics simulation. The
	code currently depending on ClutterBox2D compiles interchangeably with
	this and the previous revision of clutter-box2d.

	* clutter-box2d/clutter-box2d.cpp: refactored to use childmeta instead
	of a plain struct.
	* clutter-box2d/clutter-box2d.h:
	* clutter-box2d/clutter-box2d-actor.cpp: new file.
	* clutter-box2d/clutter-box2d-actor.h: new file.
	* clutter-box2d/Makefile.am: added new files.
	* examples/actor-manipulator.c: (actor_manipulator_press): use a
	temporary workaround clutter_box2d_actor_get_type2 (the old symbol is
	now used by the ClutterBox2DActor class).

2008-05-23  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-interaction.c: changed the handling of
	locks to work around some grab issues.
	(clutter_box2d_actor_motion), (clutter_box2d_actor_release):
	* examples/blockbox.c: (tidy_cursor): added a fake tidy_cursor to
	make the example link when there is no tidy_cursor in the process.
